# calculations

./: CMakeLists.txt
inc/: calc.h
src/: calc.c
